--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
                 <button type="submit" class="btn btn-default">Enter</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Sign in</a></li>
+                <li><a href="https://github.com/login/oauth/authorize?client_id=a30fee9101e3e694b1f2&redirect_uri=http://localhost:8887/callback&scope=user&state=1">Sign in</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> U <span class="caret"></span></a>
                     <ul class="dropdown-menu">
