--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,8 +27,8 @@
                 <button type="submit" class="btn btn-default">Enter</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" th:if="${session.user!=null}">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getLogin()}"><span class="caret"></span></a>
+                <li class="dropdown" th:if="${session.user != null}">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">my message</a></li>
                         <li><a href="#">my profile</a></li>
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
 
-                <li th:if="${session.user==null}">
+                <li th:if="${session.user == null}">
                     <a href="https://github.com/login/oauth/authorize?client_id=a30fee9101e3e694b1f2&redirect_uri=http://localhost:8887/callback&scope=user&state=1">Sign in</a>
                 </li>
             </ul>
