--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
-<body>
+<body style="background-color: #efefef">
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,6 +46,40 @@
         </div>
     </div>
 </nav>
+
+<div class="container-fluid" style="margin: 20px">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <h2><span class="glyphicon glyphicon-edit" aria-hidden="true">Publish</span></h2>
+            <hr>
+
+            <form action="/publish" method="post">
+                <div class="form-group">
+                    <label for="title">Your Question</label>
+                    <input type="text" class="form-control" id="title" th:value="${title}" name="title" placeholder="Please input your question">
+                </div>
+                <div class="form-group">
+                    <label for="content">Content</label>
+                    <textarea name="content" id="content" th:value="${content}" class="form-control" cols="30" rows="16"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="tag">Tag</label>
+                    <input type="text" name="tag" id="tag" th:value="${tag}" class="form-control" placeholder="Please input tags,separator with ','">
+                </div>
+                <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}"></div>
+                <button type="submit" class="btn btn-success" style="float: right;margin-bottom: 10px">Publish</button>
+            </form>
+
+
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+            <h3>Guide for Publishing your question</h3>
+            * Title: The max length of title : 25 <br>
+            * Content: more info and details <br>
+            * Tags: more corrective <br>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
