--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -15,7 +15,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Community</span>
             </button>
-            <a class="navbar-brand" href="#">Community</a>
+            <a class="navbar-brand" href="/">Community</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,7 +60,7 @@
                 </div>
                 <div class="form-group">
                     <label for="content">Content</label>
-                    <textarea name="content" id="content" th:value="${content}" class="form-control" cols="30" rows="16"></textarea>
+                    <textarea name="content" id="content" th:text="${content}" class="form-control" cols="30" rows="16"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">Tag</label>
